--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongodb": "^3.6.5",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "swr": "^0.5.3"
   },
   "devDependencies": {
+    "@types/mongodb": "^3.6.10",
     "@types/node": "^14.14.32",
     "@types/react": "^17.0.3",
     "typescript": "^4.2.3"
